fixed overflowing

--- a/CSS/registration-number.css
+++ b/CSS/registration-number.css
@@ -3,7 +3,6 @@ body {
   font-family: 'Lato', Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   color: #fff;
 }
 
